Casino/src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>DepositTotal__c</fullName>
        <label>DepositTotal</label>
        <summarizedField>Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Player__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GameIncome__c</fullName>
        <label>GameIncome</label>
        <summarizedField>Result__c.Gain_Loss__c</summarizedField>
        <summaryForeignKey>Result__c.Player__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <formula>GameIncome__c + DepositTotal__c - WithdrawalTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WithdrawalTotal__c</fullName>
        <label>WithdrawalTotal</label>
        <summarizedField>Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Withdrawal</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Player__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>